reports/0166-patch-failure.log
6ef87212e3ff8dd2c98f5d2d4920f97cd0b470c8c82148623b7723c2733b574d  scripts/.prepare-0166-00.b64
653f80c23a6a42da043b0c0610a125b45852349847881de3b64c0c2890c0963f  scripts/.prepare-0166-01.b64
4e770db5d4781092a75a5247aa19a6ff8439d62b156407bda80eaf67a55edd2a  scripts/.prepare-0166-02.b64
37fe2dfbb39a70fa217d3140f1022d14280f60fcc1af69c6a74c613a94b59c4b  scripts/.prepare-0166-03.b64
0120b2968abbd94d7858bdaa8d015d023b6753235e10654a8b141287d868eaea  scripts/.prepare-0166-04.b64
0122ae99f35e00c81e618bc744e2bfd0be4af2629c4e811614adce0ade4aff44  scripts/.prepare-0166-07.b64
a7b8c52d060c23b89d91ec0e0448025826b942406b45c4dc7c43f4369c6093d1  scripts/prepare-0.16.6.py
  File "scripts/prepare-0.16.6.py", line 882
    r"const { s/index.ts')).toContain("Exit Tersa")
                                                 ^
SyntaxError: unterminated string literal (detected at line 882)
